deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-portfolio
  labels:
    app: dev-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-portfolio
  template:
    metadata:
      labels:
        app: dev-portfolio
    spec:
      imagePullSecrets:
      - name: regsecret
      containers:
      - name: dev-portfolio
        image: saurabhkr952/dev-portfolio:fd4e5727700b7ceb8a8df3dc3fccc9541262f394
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
