deployment_aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-portfolio
  labels:
    app: dev-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-portfolio
  template:
    metadata:
      labels:
        app: dev-portfolio
    spec:
      imagePullSecrets:
      - name: regsecret
      containers:
      - name: dev-portfolio
        image: 278445542791.dkr.ecr.ap-south-1.amazonaws.com/react-app:e7bc11988c70f8bf8ea11f0e7fcd2fd9a1f70597
        imagePullPolicy: Always
        ports:
        - containerPort: 80
