service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-portfolio
spec:
  selector:
    app: dev-portfolio
  ports:
    - protocol: TCP
      port: 31000
      targetPort: 80
